--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   :root{
     --bg:#0b0f14;
     --panel:#0f1720;
-    --accent:#ffb86b;
     --muted:#98a0aa;
-    --glass: rgba(255,255,255,0.04);
   }
   html,body{
     height:100%;
@@ -19,6 +17,9 @@
     color:#e6eef6;
     font-family:system-ui,Segoe UI,Roboto,Arial;
     -webkit-font-smoothing:antialiased;
+    -webkit-user-select:none;
+    user-select:none;
+    touch-action:manipulation;
   }
   .app{ max-width:960px; margin:auto; padding:12px; }
   h1{ font-size:18px; margin:10px 0; text-align:center; }
@@ -39,8 +40,9 @@
     justify-content:center;
     position:relative;
     overflow:hidden;
-    touch-action: none;
+    -webkit-user-select:none;
     user-select:none;
+    touch-action:none;
     box-shadow: 0 6px 16px rgba(0,0,0,0.5);
   }
   .pad .label{
@@ -57,9 +59,9 @@
     background:radial-gradient(circle at 30% 30%, rgba(255,255,255,0.18), rgba(255,255,255,0.02));
   }
   button{
-    background:var(--glass);
+    background:rgba(255,255,255,0.05);
     color:#ddd;
-    border:1px solid rgba(255,255,255,0.05);
+    border:1px solid rgba(255,255,255,0.1);
     border-radius:8px;
     padding:8px 14px;
     font-size:14px;
@@ -93,126 +95,50 @@
 (() => {
   const AudioContext = window.AudioContext || window.webkitAudioContext;
   let ctx, masterGain;
-  let volume = 0.9;
-
   function initAudio() {
     if (!ctx) {
       ctx = new AudioContext();
       masterGain = ctx.createGain();
-      masterGain.gain.value = volume;
+      masterGain.gain.value = 0.9;
       masterGain.connect(ctx.destination);
-      console.log("🔊 Audio initialized");
     }
     if (ctx.state === "suspended") ctx.resume();
   }
-
-  // iPhone cần ít nhất một chạm thật
-  ['touchstart','mousedown','pointerdown'].forEach(ev=>{
-    document.body.addEventListener(ev,()=>initAudio(),{once:true});
-  });
-
   document.getElementById('enableAudio').addEventListener('click', async ()=>{
     initAudio();
     if (ctx.state === 'suspended') await ctx.resume();
-    const btn = document.getElementById('enableAudio');
-    btn.textContent = 'Âm đã bật ✔';
-    btn.disabled = true;
+    const btn=document.getElementById('enableAudio');
+    btn.textContent='Âm đã bật ✔';
+    btn.disabled=true;
   });
 
-  // --- Các âm trống synth ---
-  function playKick(s=1){
-    const now = ctx.currentTime;
-    const o = ctx.createOscillator();
-    const g = ctx.createGain();
-    o.type = 'sine';
-    o.frequency.setValueAtTime(150, now);
-    o.frequency.exponentialRampToValueAtTime(50, now + 0.3);
-    g.gain.setValueAtTime(1*s, now);
-    g.gain.exponentialRampToValueAtTime(0.001, now + 0.3);
-    o.connect(g).connect(masterGain);
-    o.start(now); o.stop(now+0.4);
-  }
-  function playSnare(s=1){
-    const now = ctx.currentTime;
-    const noise = ctx.createBufferSource();
-    const buffer = ctx.createBuffer(1, ctx.sampleRate*0.2, ctx.sampleRate);
-    const data = buffer.getChannelData(0);
-    for(let i=0;i<data.length;i++){ data[i]=(Math.random()*2-1)*Math.pow(1-i/data.length,1.4);}
-    noise.buffer=buffer;
-    const noiseFilter=ctx.createBiquadFilter();
-    noiseFilter.type='bandpass';
-    noiseFilter.frequency.value=1800;
-    const noiseGain=ctx.createGain();
-    noiseGain.gain.setValueAtTime(1*s, now);
-    noiseGain.gain.exponentialRampToValueAtTime(0.01, now+0.25);
-    noise.connect(noiseFilter).connect(noiseGain).connect(masterGain);
-    noise.start(now); noise.stop(now+0.3);
-  }
-  function playHat(s=1){
-    const now=ctx.currentTime;
-    const noise=ctx.createBufferSource();
-    const buffer=ctx.createBuffer(1, ctx.sampleRate*0.05, ctx.sampleRate);
-    const data=buffer.getChannelData(0);
-    for(let i=0;i<data.length;i++){data[i]=Math.random()*2-1;}
-    noise.buffer=buffer;
-    const hp=ctx.createBiquadFilter();
-    hp.type='highpass';
-    hp.frequency.value=6000;
-    const g=ctx.createGain();
-    g.gain.setValueAtTime(1*s, now);
-    g.gain.exponentialRampToValueAtTime(0.01, now+0.08);
-    noise.connect(hp).connect(g).connect(masterGain);
-    noise.start(now); noise.stop(now+0.1);
-  }
-  function playTom(freq=300,s=1){
-    const now=ctx.currentTime;
-    const o=ctx.createOscillator();
-    const g=ctx.createGain();
-    o.type='sine';
-    o.frequency.setValueAtTime(freq, now);
-    o.frequency.exponentialRampToValueAtTime(freq*0.6, now+0.25);
-    g.gain.setValueAtTime(1*s, now);
-    g.gain.exponentialRampToValueAtTime(0.01, now+0.3);
-    o.connect(g).connect(masterGain);
-    o.start(now); o.stop(now+0.4);
-  }
-  function playCrash(s=1){
-    const now=ctx.currentTime;
-    const n=ctx.createBufferSource();
-    const buffer=ctx.createBuffer(1, ctx.sampleRate*1.5, ctx.sampleRate);
-    const d=buffer.getChannelData(0);
-    for(let i=0;i<d.length;i++){d[i]=(Math.random()*2-1)*Math.pow(1-i/d.length,0.6);}
-    n.buffer=buffer;
-    const f=ctx.createBiquadFilter();
-    f.type='highpass';
-    f.frequency.value=5000;
-    const g=ctx.createGain();
-    g.gain.setValueAtTime(1*s, now);
-    g.gain.exponentialRampToValueAtTime(0.01, now+1.2);
-    n.connect(f).connect(g).connect(masterGain);
-    n.start(now); n.stop(now+1.4);
-  }
+  // Synth âm trống
+  function playKick(){const n=ctx.currentTime,o=ctx.createOscillator(),g=ctx.createGain();o.type='sine';o.frequency.setValueAtTime(150,n);o.frequency.exponentialRampToValueAtTime(50,n+.3);g.gain.setValueAtTime(1,n);g.gain.exponentialRampToValueAtTime(.001,n+.3);o.connect(g).connect(masterGain);o.start(n);o.stop(n+.4);}
+  function playSnare(){const n=ctx.currentTime,noise=ctx.createBufferSource(),b=ctx.createBuffer(1,ctx.sampleRate*.2,ctx.sampleRate),d=b.getChannelData(0);for(let i=0;i<d.length;i++){d[i]=(Math.random()*2-1)*Math.pow(1-i/d.length,1.4);}noise.buffer=b;const f=ctx.createBiquadFilter();f.type='bandpass';f.frequency.value=1800;const g=ctx.createGain();g.gain.setValueAtTime(1,n);g.gain.exponentialRampToValueAtTime(.01,n+.25);noise.connect(f).connect(g).connect(masterGain);noise.start(n);noise.stop(n+.3);}
+  function playHat(){const n=ctx.currentTime,noise=ctx.createBufferSource(),b=ctx.createBuffer(1,ctx.sampleRate*.05,ctx.sampleRate),d=b.getChannelData(0);for(let i=0;i<d.length;i++){d[i]=Math.random()*2-1;}noise.buffer=b;const f=ctx.createBiquadFilter();f.type='highpass';f.frequency.value=6000;const g=ctx.createGain();g.gain.setValueAtTime(1,n);g.gain.exponentialRampToValueAtTime(.01,n+.08);noise.connect(f).connect(g).connect(masterGain);noise.start(n);noise.stop(n+.1);}
+  function playTom(freq=300){const n=ctx.currentTime,o=ctx.createOscillator(),g=ctx.createGain();o.type='sine';o.frequency.setValueAtTime(freq,n);o.frequency.exponentialRampToValueAtTime(freq*.6,n+.25);g.gain.setValueAtTime(1,n);g.gain.exponentialRampToValueAtTime(.01,n+.3);o.connect(g).connect(masterGain);o.start(n);o.stop(n+.4);}
+  function playCrash(){const n=ctx.currentTime,src=ctx.createBufferSource(),b=ctx.createBuffer(1,ctx.sampleRate*1.5,ctx.sampleRate),d=b.getChannelData(0);for(let i=0;i<d.length;i++){d[i]=(Math.random()*2-1)*Math.pow(1-i/d.length,.6);}src.buffer=b;const f=ctx.createBiquadFilter();f.type='highpass';f.frequency.value=5000;const g=ctx.createGain();g.gain.setValueAtTime(1,n);g.gain.exponentialRampToValueAtTime(.01,n+1.2);src.connect(f).connect(g).connect(masterGain);src.start(n);src.stop(n+1.4);}
 
-  // Ripple hiệu ứng
-  function rippleAt(pad,x,y){
+  // Hiệu ứng chạm
+  function ripple(pad,x,y){
     const r=document.createElement('div');
     r.className='ripple';
-    const size=Math.max(pad.clientWidth,pad.clientHeight);
-    r.style.width=r.style.height=size+'px';
-    r.style.left=x+'px'; r.style.top=y+'px';
+    const s=Math.max(pad.clientWidth,pad.clientHeight);
+    r.style.width=r.style.height=s+'px';
+    r.style.left=x+'px';r.style.top=y+'px';
     pad.appendChild(r);
     requestAnimationFrame(()=>r.style.transform='translate(-50%,-50%) scale(1)');
-    setTimeout(()=>{r.style.opacity='0'; setTimeout(()=>r.remove(),400);},100);
+    setTimeout(()=>{r.style.opacity='0';setTimeout(()=>r.remove(),400);},100);
   }
 
-  // Gắn sự kiện
   document.querySelectorAll('.pad').forEach(pad=>{
     pad.addEventListener('pointerdown', e=>{
+      e.preventDefault();
       initAudio();
       const rect=pad.getBoundingClientRect();
-      rippleAt(pad, e.clientX-rect.left, e.clientY-rect.top);
-      const drum=pad.dataset.drum;
-      switch(drum){
+      ripple(pad,e.clientX-rect.left,e.clientY-rect.top);
+      const d=pad.dataset.drum;
+      switch(d){
         case'kick':playKick();break;
         case'snare':playSnare();break;
         case'hat':playHat();break;
@@ -222,7 +148,7 @@
       }
       pad.classList.add('active');
       setTimeout(()=>pad.classList.remove('active'),150);
-    });
+    },{passive:false});
   });
 })();
 </script>
